--- a/css/p_geral.css
+++ b/css/p_geral.css
@@ -6,7 +6,7 @@ a:active {text-decoration: none;}
 a:visited {text-decoration: none;color: #333333}
 a:hover {text-decoration:none;color: #FFF}
 
-#bar_{background-color:#666;width:100%; height:50px; margin-top:0px;}
+#bar_{background-color:#666;width:100%; height:50px; margin-top:0px; cursor:pointer;}
 .bar_:hover{background-color:#999;text-shadow:#FFF;}
 
 form label {
@@ -28,7 +28,18 @@ form label {
     padding:5px;
 	float: left;
 	border-radius:10px;}
-
+#pesquisapacote input, select{
+	background-color:#f2f2f2;
+    border:1px solid #f2f2f2;
+    padding:8px;
+	float: left;
+	border-radius:10px;}
+#pesquisarhotel input, select{
+	background-color:#f2f2f2;
+    border:1px solid #f2f2f2;
+    padding:8px;
+	float: left;
+	border-radius:10px;}		
 #block1 {
 	position: absolute;
 	background-color:;
@@ -38,7 +49,7 @@ form label {
 	height:auto;
 }
 #op_basicas_block1{background-color:;}
-	#part1{background-color:;width: 100%; display: table; overflow: hidden;}
+	#part1{width: 100%; display: table; overflow: hidden;}
 		#part1_2{background-color:;width: 100%; display: table; overflow: hidden;}
 	#part2{background-color:;width: 100%; display: table; overflow: hidden;}
 		#dataIda{margin:5px 1px 1px 4%; background-color:green;}
@@ -54,13 +65,27 @@ form label {
 		#escalaDIV{margin:5px 1px 5px 1%; background-color:green;}
 		#bilhete{margin:5px 1px 5px 46%;  background-color:red;}
 
-#op_avancada{curso:pointer;}
+#op_avancada{cursor:pointer;}
 #op_avancada_fecha{display: none;}
+#submit_block1{cursor:pointer;}
+#submit_block2{cursor:pointer;}
+#submit_hotel{cursor:pointer}
 
-#block2 {display: none;position:absolute;width: 58%;left:2%;}
- .dest_volta{position: absolute;left: 250px;top:-16px;}
-#block3 {display: none;position:absolute;width: 58%;left:2%;}
-.criancaH{position: absolute; left:75px;top:161px}
+#block2 {display:none;position: absolute;background-color:; overflow: hidden;width: 94%;left: 3%;top: 12%;}
+	#block2_1{background-color:;width:100%;display: table; overflow: hidden;margin:5px 1px 1px 0%;}
+	#block2_2{background-color:;width:100%;display: table; overflow: hidden;}
+		#voltaForm2{margin:5px 1px 5px 2%;}
+		#idaForm2{margin:5px 1px 5px 5%;}
+	#block2_3{background-color:;width:100%;display: table; overflow: hidden;margin:5px 1px 1px 0%;}
+
+
+#block3 {display:none;position: absolute;background-color:; overflow: hidden;width: 94%;left: 3%;top: 12%;}
+	#destinoH{background-color:;width: 100%; display: table; overflow: hidden;}
+	#entradaH{margin:5px 1px 1px 0%;}
+	#saidaH{margin:5x 1px 1px 46%;}
+#block3_1{background-color:;width:100%;display: table; overflow: hidden;margin:5px 1px 1px 0%;}
+
+#hotel_sub{margin:10px 1px 1px 0%;}
 
 
 
