--- a/css/rama.css
+++ b/css/rama.css
@@ -8,18 +8,10 @@
 root { 
     display: block;
 }
-#corpo{
-	position:absolute;
-	width:100%;
-	height:100%;
-	left: 11px;
-	top: 12px;
-}
 .body {
      background-color:#06C;
-     background-size: 100%;
-     background-repeat: no-repeat; 
 }
+#paginaIndex{background-color:#06C;}
 a:link {text-decoration: none;color: #333333}
 a:active {text-decoration: none;}
 a:visited {text-decoration: none;color: #333333}
